# sha-3

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: hash.h  hash_utils.h
src/: hash.cpp  hash_utils.cpp  main.cpp
test/src/: bit_management_test.cpp  permutation_test.cpp
